--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 ---
-title: Neha Binish
+title: 3D Kinematics of eye movements
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Neha Binish!</h1>
-	<p>This website is under construction! </p>
+	<h1>Eye movements/h1>
+	<p>Any rigid body is able to move freely in three dimensional space using six degrees of freedom. Translational motion along the three orthogonal axis, 
+		correspond to three degrees of motion and the remaining three accounts for the rotation of the rigit body around the three axes. The eye is such
+		a rigid body. The three ocular rotations can be classified as rotations about a horizontal axis corresponding to upward and downward gaze, rotations
+		about the vertical axis corresponding to sideways gaze and torsional rotations about the line of sight.</p>
 </div><!-- /.blurb -->
