--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: 3D Kinematics of eye movements
 ---
 <div class="blurb">
-	<h1>Eye movements/h1>
+	<h1>Eye movements</h1>
 	<p>Any rigid body is able to move freely in three dimensional space using six degrees of freedom. Translational motion along the three orthogonal axis, 
 		correspond to three degrees of motion and the remaining three accounts for the rotation of the rigit body around the three axes. The eye is such
 		a rigid body. The three ocular rotations can be classified as rotations about a horizontal axis corresponding to upward and downward gaze, rotations
