--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title: 3D Kinematics of eye movements
 ---
 <div class="blurb">
 	<h1>Eye movements</h1>
-	<p>Any rigid body is able to move freely in three dimensional space using six degrees of freedom. Translational motion along the three orthogonal axis, 
-		correspond to three degrees of motion and the remaining three accounts for the rotation of the rigit body around the three axes. The eye is such
-		a rigid body. The three ocular rotations can be classified as rotations about a horizontal axis corresponding to upward and downward gaze, rotations
-		about the vertical axis corresponding to sideways gaze and torsional rotations about the line of sight.</p>
+	<p>Any rigid body is able to move freely in three dimensional space using six degrees of freedom. Translational motion along the three orthogonal axis, correspond to three degrees of motion and the remaining three ac- counts for the rotation of the rigid body around the three axes. The eye is such a rigid body.
+To simplify the study of eye movements, most eye tracking experiments require the head to be immobilised in a chin rest such that eye tracking is restricted to only the rotational components of the total eye movement.
+</p>
+<h2>Decomposing Three-Dimensional Rotations</h2>
 </div><!-- /.blurb -->
