--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@ title: 3D Kinematics of eye movements
 ---
 <div class="blurb">
 	<h1>Eye movements</h1>
-	<p>Any rigid body is able to move freely in three dimensional space using six degrees of freedom. Translational motion along the three orthogonal axis, correspond to three degrees of motion and the remaining three ac- counts for the rotation of the rigid body around the three axes. The eye is such a rigid body.
-To simplify the study of eye movements, most eye tracking experiments require the head to be immobilised in a chin rest such that eye tracking is restricted to only the rotational components of the total eye movement.
-</p>
+	<p>Any rigid body is able to move freely in three dimensional space using six degrees of freedom. 
+		Translational motion along the three orthogonal axis, correspond to three degrees of motion and the remaining three accounts for 
+		the rotation of the rigid body around the three axes. The eye is such a rigid body.
+		To simplify the study of eye movements, most eye tracking experiments require the head to be immobilised 
+		in a chin rest such that eye tracking is restricted to only the rotational components of the total eye movement.
+	</p>
 <h2>Decomposing Three-Dimensional Rotations</h2>
+<p>One of the oldest and most common ways of studying a three dimensional rotation is by decomposing it into three consecutive rotations about three orthogonal axes. </p>
+<p>Rotations around the light of sight (x-axis) is called roll that accounts for the torsional rotations of the eye and the rotation around the horizontally 
+	directed y-axis is the pitch that appears as the upward or downward gaze. Finally, the rotation around the vertically directed z-axis is the yaw 
+	leading to the sideways gaze.
+</p>
+	<p>Such an elemental rotation can be mathematically represented using three basic rotation matrices rotate vectors by an angle
+	<math>&theta<\math>, <math>&phi<\math>, and <\math>&psi<\math> about the z, y and x-axis, respectively in three dimensions, following the right-hand rule—which codifies their alternating signs.</p>
 </div><!-- /.blurb -->
