--- a/index.html
+++ b/index.html
@@ -3,33 +3,72 @@ layout: default
 title: 3D Kinematics of eye movements
 ---
 <div class="blurb">
+	
 	<h1>Eye movements</h1>
-	<p>Any rigid body is able to move freely in three dimensional space using six degrees of freedom. 
-		Translational motion along the three orthogonal axis, correspond to three degrees of motion and the remaining three accounts for 
-		the rotation of the rigid body around the three axes. The eye is such a rigid body.
-		To simplify the study of eye movements, most eye tracking experiments require the head to be immobilised 
-		in a chin rest such that eye tracking is restricted to only the rotational components of the total eye movement.
-	</p>
-<h2>Decomposing Three-Dimensional Rotations</h2>
-<p>One of the oldest and most common ways of studying a three dimensional rotation is by decomposing it into three consecutive rotations about three orthogonal axes. </p>
-<p>Rotations around the light of sight (x-axis) is called roll that accounts for the torsional rotations of the eye and the rotation around the horizontally 
-	directed y-axis is the pitch that appears as the upward or downward gaze. Finally, the rotation around the vertically directed z-axis is the yaw 
-	leading to the sideways gaze.
-</p>
-	<p>Such an elemental rotation can be mathematically represented using three basic rotation matrices rotate vectors by an angle
-	---- about the z, y and x-axis, respectively in three dimensions, following the right-hand rule—which codifies their alternating signs.</p>
-	<p>
-	The Rotation matrices corresponding to each of these are as follows - </p>
-	<p> Any General rotation can then be defined by the matrix multiplication of the above rotation matrices. <p>
-	<p> We can describe the rotation of the eye-fixed coordinate system from the reference position to any new posi-
-tion using the general rotation matrix represented in equation (4). This is an intrinsic rotation about z-y-x  axes. The order for matrix multiplication is from right to 
-		left and desired vector for the final eye position is dependent on the order since matrix multiplication is non-commutative. 
-		This can produced undesired effects.</p>
-	<p> The rotation matrix R still completely describes the current eye position. However, its elements are no longer determined by the relatively simple 
-		formulaes in equation 1.</p>
-	<p>To understand this better, we look at figure 4 Inverting the sequence of two rotations about space-fixed axes changes the final orientation of the 
-		object, even if it is rotated by the same degree [2]. The final orientation of the figure in [A] differs from that of [B] due to the non 
-		commutativity of the Rotation Matrix.</p>
-<p> However, it is also possible to reach the same final orientation by two different sequence of rotations, as is the case for [A] and [C].</p>
+	
+		<p>Any rigid body is able to move freely in three dimensional space using six degrees of freedom. 
+			Translational motion along the three orthogonal axis, correspond to three degrees of motion and the remaining three accounts for 
+			the rotation of the rigid body around the three axes. The eye is such a rigid body.
+			To simplify the study of eye movements, most eye tracking experiments require the head to be immobilised 
+			in a chin rest such that eye tracking is restricted to only the rotational components of the total eye movement.
+		</p>
+
+		<h2>Decomposing Three-Dimensional Rotations</h2>
+
+			<p>One of the oldest and most common ways of studying a three dimensional rotation is by decomposing it into three consecutive rotations about three orthogonal axes. </p>
+
+			<p>Rotations around the light of sight (x-axis) is called roll that accounts for the torsional rotations of the eye and the rotation around the horizontally 
+				directed y-axis is the pitch that appears as the upward or downward gaze. Finally, the rotation around the vertically directed z-axis is the yaw 
+				leading to the sideways gaze.
+			</p>
+
+			<p>Such an elemental rotation can be mathematically represented using three basic rotation matrices rotate vectors by an angle
+			---- about the z, y and x-axis, respectively in three dimensions, following the right-hand rule—which codifies their alternating signs.</p>
+
+			<p>
+			The Rotation matrices corresponding to each of these are as follows - </p>
+
+			<p> Any General rotation can then be defined by the matrix multiplication of the above rotation matrices. <p>
+
+			<p> We can describe the rotation of the eye-fixed coordinate system from the reference position to any new position 
+				using the general rotation matrix represented in equation (4). This is an intrinsic rotation about z-y-x  axes. The order for matrix multiplication is from right to 
+				left and desired vector for the final eye position is dependent on the order since matrix multiplication is non-commutative. 
+				This can produced undesired effects.</p>
+
+			<p> The rotation matrix R still completely describes the current eye position. However, its elements are no longer determined by the relatively simple 
+				formulaes in equation 1.</p>
+
+			<p>To understand this better, we look at figure 4 Inverting the sequence of two rotations about space-fixed axes changes the final orientation of the 
+				object, even if it is rotated by the same degree [2]. The final orientation of the figure in [A] differs from that of [B] due to the non 
+				commutativity of the Rotation Matrix.</p>
+
+			<p> However, it is also possible to reach the same final orientation by two different sequence of rotations, as is the case for [A] and [C].</p>
+
+	<h1>Donder’s Law<\h1>
+		
+		<p>The proposition that for any head position and any direction of gaze the eye always assumes the same unique position, resulting in the fixation point
+			being focused on the fovea. The orientation is always the same no matter where the eye came from.</p>
+		
+		<p>In order to implement Donder’s law, it is important to find a unique method to reach every final orientation or the final eye position. If the previously
+			mentioned rotation matrix method is followed, there are six pos- sible sequence of rotations arising from the three rotation axes, 
+			some of which reach the same orientation as the other sequence.</p>
+		
+
+	<h1>The Gimbal Arrangement</h1>	
+		
+		<p>One of the easiest and most commonly followed solution to Donder’s law is to nest co-ordinate systems and describe rotations in either a head-fixed or eye-fixed 
+			co-ordinate system. Such a co-ordinate system is known as Gimballed Co-ordinate system. There are infinite number of possible co-ordinate systems that fulfil 
+			this condition. However, for ease, we choose a vertical and a horizontal nested system.</p>
+		
+		<h2>Fick’s System</h2>
+			<p>A Gimbal co-ordinate Fick’s system can be be used for eye tracking experiments where the head is immo- bilised using a chin rest. The sequence of rotation is horizontal, 
+				vertical, and torsional or in terms of our previous notations; yaw, pitch and roll.</p>
+		
+		<h2>Helmholtz System</h2>
+			<p>Another commonly used system in the past is the Helmholtz system that differs from the Fick’s system as it prefers the vertical axis over the horizontal axis.
+				The sequence of rotation is pitch, yaw and roll about the new line of sight.</p>
+	
+		
+	
 	
 </div><!-- /.blurb -->
