--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ title: 3D Kinematics of eye movements
 
 			<p> However, it is also possible to reach the same final orientation by two different sequence of rotations, as is the case for [A] and [C].</p>
 
-	<h1>Donder’s Law<\h1>
+	<h1>Donder’s Law</h1>
 		
 		<p>The proposition that for any head position and any direction of gaze the eye always assumes the same unique position, resulting in the fixation point
 			being focused on the fovea. The orientation is always the same no matter where the eye came from.</p>
