--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@ title: 3D Kinematics of eye movements
 				directed y-axis is the pitch that appears as the upward or downward gaze. Finally, the rotation around the vertically directed z-axis is the yaw 
 				leading to the sideways gaze.
 			</p>
-			<IMG SRC="fig1.gif">
+		
+			 <img src="fig1.gif" alt=""  /> 
+			 <img src="fig2.gif" alt=""  />
+			 <img src="fig3.gif" alt="" />
 
 			<p>Such an elemental rotation can be mathematically represented using three basic rotation matrices rotate vectors by an angle
 			---- about the z, y and x-axis, respectively in three dimensions, following the right-hand rule—which codifies their alternating signs.</p>
