--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@ title: 3D Kinematics of eye movements
 				leading to the sideways gaze.
 			</p>
 	
-			<div>
-			 <img src="fig1.gif" alt=""  /> 
-			 <img src="fig2.gif" alt=""  />
-			 <img src="fig3.gif" alt="" />
+			  <div class="row">
+			  <div class="column">
+			    <img src="fig1.gif" alt="Upwards and downward gaze" style="width:100%">
+			  </div>
+			  <div class="column">
+			    <img src="fig2.gif" alt="Sideways gaze" style="width:100%">
+			  </div>
+			  <div class="column">
+			    <img src="fig3.gif" alt="Torsional rotations" style="width:100%">
+			  </div>
 			</div>
 
 			<p>Such an elemental rotation can be mathematically represented using three basic rotation matrices rotate vectors by an angle
