--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@ title: 3D Kinematics of eye movements
 	
 			  <div class="row">
 				  <div class="column">
-				    <img src="fig1.gif" alt="Upwards and downward gaze">
+				    <img src="fig1.gif" title="Upwards and downward gaze">
 				  </div>
 				  <div class="column">
-				    <img src="fig2.gif" alt="Sideways gaze">
+				    <img src="fig2.gif" title="Sideways gaze">
 				  </div>
 				  <div class="column">
-				    <img src="fig3.gif" alt="Torsional rotations">
+				    <img src="fig3.gif" title="Torsional rotations">
 				  </div>
 			</div>
 
@@ -50,7 +50,7 @@ title: 3D Kinematics of eye movements
 			<p> The rotation matrix R still completely describes the current eye position. However, its elements are no longer determined by the relatively simple 
 				formulaes in equation 1.</p>
 	
-			<img src="throt.png" alt="Torsional rotations" style="width:100%">
+			<img src="throt.png" title="Torsional rotations" style="width:100%">
 
 			<p>To understand this better, we look at figure 4 Inverting the sequence of two rotations about space-fixed axes changes the final orientation of the 
 				object, even if it is rotated by the same degree [2]. The final orientation of the figure in [A] differs from that of [B] due to the non 
