--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@ title: 3D Kinematics of eye movements
 		
 		<p><i>The proposition that for any head position and any direction of gaze the eye always assumes the same unique position, resulting in the fixation point
 			being focused on the fovea. The orientation is always the same no matter where the eye came from.</i></p>
-	
-		<img src="donder.png" alt="Donder’s Law [4]" style="width:100%">
+		<figure>
+			<img src="donder.png" alt="Donder’s Law [4]" style="width:100%">
+			<figcaption> Donder’s Law [4] </figcaption>
+		</figure>
 		
 		<p>In order to implement Donder’s law, it is important to find a unique method to reach every final orientation or the final eye position. If the previously
 			mentioned rotation matrix method is followed, there are six pos- sible sequence of rotations arising from the three rotation axes, 
