--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@ title: 3D Kinematics of eye movements
 							    90 deg rotation about the vertical axis h3. 
 							    [C] A 90 deg rotation about the eye-fixed axis e2, followed by a 
 							    90 deg rotation about the eye-fixed axis e3" style="width:100%">
-				 <figcaption> [A] 90 deg rotation about the vertical axis h3, 
-							    followed by a 90 deg rotation about the horizontal axis h2. 
+				 <figcaption><b>[A] 90 deg rotation about the vertical axis h3, 
+							    followed by a 90 deg rotation about the horizontal axis h2.<br>
 							    [B] A 90 deg rotation about the horizontal axis h2, followed by a 
-							    90 deg rotation about the vertical axis h3. 
+							    90 deg rotation about the vertical axis h3.<br>
 							    [C] A 90 deg rotation about the eye-fixed axis e2, followed by a 
-					 90 deg rotation about the eye-fixed axis e3 </figcaption>
+					 90 deg rotation about the eye-fixed axis e3<b></figcaption>
 			</figure>	
 
 			<p>To understand this better, we look at figure 4 Inverting the sequence of two rotations about space-fixed axes changes the final orientation of the 
@@ -76,7 +76,7 @@ title: 3D Kinematics of eye movements
 			being focused on the fovea. The orientation is always the same no matter where the eye came from.</i></p>
 		<figure>
 			<img src="donder.png" alt="Donder’s Law [4]" style="width:100%">
-			<figcaption> Donder’s Law [4] </figcaption>
+			<figcaption><center><b>Donder’s Law [4]</b></center></figcaption>
 		</figure>
 		
 		<p>In order to implement Donder’s law, it is important to find a unique method to reach every final orientation or the final eye position. If the previously
