--- a/index.html
+++ b/index.html
@@ -21,18 +21,30 @@ title: 3D Kinematics of eye movements
 				directed y-axis is the pitch that appears as the upward or downward gaze. Finally, the rotation around the vertically directed z-axis is the yaw 
 				leading to the sideways gaze.
 			</p>
-			 
-			  <div class="row">
-				  <div class="column">
-				    <img src="fig1.gif" title="Upwards and downward gaze">
-				  </div>
-				  <div class="column">
-				    <img src="fig2.gif" title="Sideways gaze">
-				  </div>
-				  <div class="column">
-				    <img src="fig3.gif" title="Torsional rotations">
-				  </div>
-			</div>
+			<div id="content" class="center">
+
+			    <div class="flex">
+			      <figure >
+				<a href="#">
+				  <img src="fig1.gif" title="Upwards and downward gaze">
+				</a>
+				<figcaption style="text-align:center">Upwards and downward gaze</figcaption>
+			      </figure>
+			      <figure >
+				<a href="#">
+				  <img src="fig2.gif" title="Sideways gaze">
+				</a>
+				<figcaption style="text-align:center">Sideways gaze</figcaption>
+			      </figure>
+			      <figure >
+				<a href="#">
+				   <img src="fig3.gif" title="Torsional rotations">
+				</a>
+				<figcaption style="text-align:center">Torsional rotations</figcaption>
+			      </figure>
+			    </div>
+
+			  </div>
 
 			<p>Such an elemental rotation can be mathematically represented using three basic rotation matrices rotate vectors by an angle
 			---- about the z, y and x-axis, respectively in three dimensions, following the right-hand rule—which codifies their alternating signs.</p>
