--- a/index.html
+++ b/index.html
@@ -52,10 +52,16 @@ title: 3D Kinematics of eye movements
 			  </div>
 
 			<p>Such an elemental rotation can be mathematically represented using three basic rotation matrices rotate vectors by an angle
-			\( 2^x \)about the z, y and x-axis, respectively in three dimensions, following the right-hand rule—which codifies their alternating signs.</p>
+			\( \theta \), \( \phi \) and \( \psi \) about the z, y and x-axis, respectively in three dimensions, following the right-hand rule—which codifies their alternating signs.</p>
 
 			<p>
-			The Rotation matrices corresponding to each of these are as follows - </p>
+			The Rotation matrices corresponding to each of these are as follows - 
+			\[ \begin{split}
+			    R_3(\theta) &= \left[ \begin{matrix} \cos (\theta) & - \sin (\theta) & 0 \\ \sin (\theta) & \cos (\theta) & 0 \\0 & 0 & 1 \end{matrix} \right] \\
+			    R_2(\phi) &= \left[ \begin{matrix} \cos (\phi) & 0 &  \sin (\phi) \\ 0 & 1 & 0 \\ - \sin (\phi) & 0 & \cos (\phi) \end{matrix} \right] \\
+			    R_1(\psi) &= \left[ \begin{matrix} 1 & 0 & 0 \\ 0 & \cos (\psi) & - \sin (\phi) \\ 0 & \sin (\psi) & \cos (\psi) \end{matrix} \right] \\ 
+		    		\end{split} \]
+			</p>
 
 			<p> Any General rotation can then be defined by the matrix multiplication of the above rotation matrices. <p>
 
