--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@ title: 3D Kinematics of eye movements
 			</p>
 			<div id="content" class="center">
 
-			    <div class="flex">
-			      <figure style="float:left; width:40%" >
+			    <div>
+			      <figure style="float:left; width:35%" >
 				<a href="#">
 				  <img src="fig1.gif" title="Upwards and downward gaze" >
 				</a>
 				      <figcaption style="text-align:center"><b>Upwards and downward gaze</b></figcaption>
 			      </figure>
 				    
-			      <figure style="float:left; width:40%" >
+			      <figure style="float:left; width:35%" >
 				<a href="#">
 				  <img src="fig2.gif" title="Sideways gaze">
 				</a>
@@ -40,9 +40,11 @@ title: 3D Kinematics of eye movements
 			    </div>
 			  </div>
 
-			 <figure style ="width:40%" >  			
+			 <figure style ="width:40%" >  
+				   <center>
 				   <img src="fig3.gif" title="Torsional rotations">
-				   <figcaption style="text-align:center"><b>Torsional rotations</b></figcaption>	 	
+				   <figcaption style="text-align:center"><b>Torsional rotations</b></figcaption>
+			           <\center>		   
 			  </figure>
 				    
 			<p>Such an elemental rotation can be mathematically represented using three basic rotation matrices rotate vectors by an angle
@@ -51,10 +53,23 @@ title: 3D Kinematics of eye movements
 			<p>
 			The Rotation matrices corresponding to each of these are as follows - 
 			\[ R_3(\theta) = \left[ \begin{matrix} \cos (\theta) & - \sin (\theta) & 0 \\ \sin (\theta) & \cos (\theta) & 0 \\0 & 0 & 1 \end{matrix} \right] \]
-
+			\[ R_2(\phi)   = \left[ \begin{matrix} \cos (\phi) & 0 &  \sin (\phi) \\ 0 & 1 & 0 \\ - \sin (\phi) & 0 & \cos (\phi) \end{matrix} \right]\]
+			\[ R_1(\psi)   = \left[ \begin{matrix} 1 & 0 & 0 \\ 0 & \cos (\psi) & - \sin (\phi) \\ 0 & \sin (\psi) & \cos (\psi) \end{matrix} \right] \]	
 			</p>
 
-			<p> Any General rotation can then be defined by the matrix multiplication of the above rotation matrices. <p>
+			<p> Any General rotation can then be defined by the matrix multiplication of the above rotation matrices. 
+			    \[  R = R_3(\theta) R_2(\phi)R_1(\psi) \]	
+			    \[  R = \left[ \begin{matrix}  
+				\cos(\theta)\cos(\phi) & 
+				\cos(\theta)\sin(\phi)\sin(\psi) - \sin(\theta)\cos(\psi) & 
+				\cos(\theta)\sin(\phi)\cos(\psi) + \sin(
+				\theta)\sin(\psi) \\ 
+				\sin(\theta)\cos(\phi) & 
+				\sin(\theta)\sin(\phi)\sin(\psi) + \cos(\theta)\cos(\psi) & 
+				\sin(\theta)\sin(\phi)\cos(\psi) - \cos(
+				\theta)\sin(\psi) \\ 
+				- sin(\phi) & \cos(\psi)\sin(\psi) & \cos(\phi)\cos(\psi) \end{matrix}\right] \] 		
+			</p>
 
 			<p> We can describe the rotation of the eye-fixed coordinate system from the reference position to any new position 
 				using the general rotation matrix represented in equation (4). This is an intrinsic rotation about z-y-x  axes. The order for matrix multiplication is from right to 
