--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ title: 3D Kinematics of eye movements
 
 			<p> Any General rotation can then be defined by the matrix multiplication of the above rotation matrices. 
 			    \[  R = R_3(\theta) R_2(\phi)R_1(\psi) \]	
+			<equation id="eq2" style="">$$ R = R_3(\theta) R_2(\phi)R_1(\psi)$$</equation><div class="equation_number">(1)</div>
 			    \[  R = \left[ \begin{matrix}  
 				\cos(\theta)\cos(\phi) & 
 				\cos(\theta)\sin(\phi)\sin(\psi) - \sin(\theta)\cos(\psi) & 
