--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@ title: 3D Kinematics of eye movements
 	
 			<figure>
 					<img src="fig1.gif" alt="Upwards and downward gaze [4]" >
-					<figcaption><center><b>(1). Upwards and downward gaze [4]</b></center></figcaption>
+					<figcaption><center><b>(1). Upwards and downward gaze <cite>[4]</cite></b></center></figcaption>
 			</figure>
 			
 			<figure>
 					<img src="fig2.gif" alt="Sideways Gaze [4]" >
-					<figcaption><center><b>(2). Sideways Gaze  [4]</b></center></figcaption>
+					<figcaption><center><b>(2). Sideways Gaze <cite>[4]</cite></b></center></figcaption>
 			</figure>
 		
 			<figure>
-					<img src="fig2.gif" alt="Torsional Rotations [4]" >
-					<figcaption><center><b>(3). Torsional Rotations [4]</b></center></figcaption>
+					<img src="fig3.gif" alt="Torsional Rotations [4]" >
+					<figcaption><center><b>(3). Torsional Rotations <cite>[4]</cite></b></center></figcaption>
 			</figure>
 					<div id="content" class="center">
 
@@ -77,7 +77,7 @@ title: 3D Kinematics of eye movements
 							    90 deg rotation about the vertical axis h3. 
 							    [C] A 90 deg rotation about the eye-fixed axis e2, followed by a 
 							    90 deg rotation about the eye-fixed axis e3" style="width:120%">
-				 <figcaption><b>(4). [A] 90 deg rotation about the vertical axis h3, 
+				 <figcaption><b>(4). Source:<cite>[2]</cite> [A] 90 deg rotation about the vertical axis h3, 
 							    followed by a 90 deg rotation about the horizontal axis h2.<br>
 							    [B] A 90 deg rotation about the horizontal axis h2, followed by a 
 							    90 deg rotation about the vertical axis h3.<br>
@@ -96,8 +96,8 @@ title: 3D Kinematics of eye movements
 		<p><i>The proposition that for any head position and any direction of gaze the eye always assumes the same unique position, resulting in the fixation point
 			being focused on the fovea. The orientation is always the same no matter where the eye came from.</i></p>
 		<figure>
-			<img src="donder.png" alt="Donder’s Law [4]" style="width:100%">
-			<figcaption><center><b>(5). Donder’s Law [4]</b></center></figcaption>
+			<img src="donder.png" alt="Donder’s Law" style="width:100%">
+			<figcaption><center><b>(5). Donder’s Law <cite>[4]</cite></b></center></figcaption>
 		</figure>
 		
 		<p>In order to implement Donder’s law, it is important to find a unique method to reach every final orientation or the final eye position. If the previously
@@ -112,7 +112,7 @@ title: 3D Kinematics of eye movements
 			this condition. However, for ease, we choose a vertical and a horizontal nested system.</p>
 		<figure>
 			<img src="gimbal.png" alt="Demonstration of the Gimbal Co-ordinate system [3]" style="width:100%">
-			<figcaption><center><b>(6). Demonstration of the Gimbal Co-ordinate system [3]</center></b></figcaption>
+			<figcaption><center><b>(6). Demonstration of the Gimbal Co-ordinate system  <cite>[3]</cite></center></b></figcaption>
 		</figure>	
 	
 		<p>Nested Gimbal systems such as the ones mentioned below, fix a nesting order for the decomposition of a three-dimensional rotation into three consecutive rotations. 
@@ -141,7 +141,7 @@ title: 3D Kinematics of eye movements
 		
 		<figure>
 			<img src="euler.png" alt=" Demonstration of the Euler Fixed Axis Theorem [6]" style="width:80%">
-			<figcaption><center><b>(7). Demonstration of the Euler Fixed Axis Theorem [6]</b></center></figcaption>			
+			<figcaption><center><b>(7). Demonstration of the Euler Fixed Axis Theorem  <cite>[6]</cite></b></center></figcaption>			
 		</figure>	
 	
 		<p>A rotation represented by an Euler axis and angle.Every final eye position then can be described by a unique rotation vector that denotes a 
@@ -153,7 +153,7 @@ title: 3D Kinematics of eye movements
 			Such a number system extends the complex numbers and is given by equation 5.</p>
 		<figure>
 			<img src="quat.png" alt=" Quaternion [5]" style="width:80%">
-			<figcaption><center><b>(8). Quaternion [5]</b></center></figcaption>
+			<figcaption><center><b>(8). Quaternion  <cite>[5]</cite></b></center></figcaption>
 		</figure>
 				 
 		 \[ q = q_0 + \left(q_1\hat{i} + q_2\hat{j} + q_3\hat{k} \right) \]
@@ -183,7 +183,7 @@ title: 3D Kinematics of eye movements
 	
 	<figure>
 		<img src="listing.png" alt="Listing’s plane [4]" style="width:100%">
-		<figcaption><center><b>(9). Listing’s plane [4]</b></center></figcaption>
+		<figcaption><center><b>(9). Listing’s plane  <cite>[4]</cite></b></center></figcaption>
 	</figure>
 	
 	<p>The reference position for a dataset that describes the Listings plane as its displacement plane is called the primary position. 
