--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ title: 3D Kinematics of eye movements
 							    90 deg rotation about the vertical axis h3. 
 							    [C] A 90 deg rotation about the eye-fixed axis e2, followed by a 
 							    90 deg rotation about the eye-fixed axis e3" style="width:120%">
-				 <figcaption><b>(4). Source:<cite>[2]</cite> [A] 90 deg rotation about the vertical axis h3, 
+				 <figcaption><b>(4). <cite>[2]</cite> [A] 90 deg rotation about the vertical axis h3, 
 							    followed by a 90 deg rotation about the horizontal axis h2.<br>
 							    [B] A 90 deg rotation about the horizontal axis h2, followed by a 
 							    90 deg rotation about the vertical axis h3.<br>
