--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@ title: 3D Kinematics of eye movements
 Vision research, 30:111–27, 02 1990.
 [5] B. L. van der Waerden. Hamilton’s discovery of quaternions. Mathematics Magazine, 49(5):227–234,
 1976.
-[6] Wikipedia contributors. Euler’s rotation theorem — Wikipedia, the free encyclopedia. https://en. wikipedia.org/w/index.php?title=Euler%27s_rotation_theorem&oldid=1050406121, 2021. [Online; accessed 1-February-2022].
-[7] Wikipedia contributors. Rotation matrix — Wikipedia, the free encyclopedia. https://en. wikipedia.org/w/index.php?title=Rotation_matrix&oldid=1063723710, 2022. [Online; accessed 1-February-2022].
+[6] Wikipedia contributors. Euler’s rotation theorem — Wikipedia, the free encyclopedia. 
+[7] Wikipedia contributors. Rotation matrix — Wikipedia, the free encyclopedia. 
 						
 						
 	
